src/objects/acfDependent_Product__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>acfAnswer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipName>Dependent_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfFilter__c</fullName>
        <description>Click Loans</description>
        <label>Filter</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfProduct_Family__c</fullName>
        <description>Click Loans</description>
        <formula>Text(acfProduct__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Dependent_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Click Loans Dependent Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>acfAnswer__c</columns>
        <columns>acfFilter__c</columns>
        <columns>acfProduct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependent Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>